# speciale_implementation

./: CMakeList.txt  CMakeLists.txt  Dockerfile  Dockerfile.DUPLO  count-gate-types.py  entry-point.sh  parse.py
duplo-mains/: poker-client-main.cpp  poker-const-main.cpp  poker-eval-main.cpp  poker-mains.h  poker-paser.cpp
